samples/_failures_safe/1761137775_4c3ce7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f4890a1.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_3f4890a1.c:166:9: error: expected declaration or statement at end of input
  166 |         }
      |         ^
./samples/SAFE/__tmp_3f4890a1.c:166:9: error: expected declaration or statement at end of input
